--- a/src/main/resources/com/example/media_proyect/Login.fxml
+++ b/src/main/resources/com/example/media_proyect/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 
 <?import javafx.scene.layout.HBox?>
-<Pane fx:controller="com.example.media_proyect.controllers.Login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="com.example.media_proyect.controllers.LoginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <PasswordField fx:id="txtPassword" layoutX="101.0" layoutY="250.0" promptText="Password" />
       <TextField fx:id="txtUser" layoutX="101.0" layoutY="214.0" promptText="User" />
